--- a/spring-aop-pointcut-declarations/pom.xml
+++ b/spring-aop-pointcut-declarations/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.spring</groupId>
-    <artifactId>spring-aop</artifactId>
+    <artifactId>spring-aop-pointcut-declarations</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
