--- a/webcustomertracker/pom.xml
+++ b/webcustomertracker/pom.xml
@@ -28,6 +28,7 @@
         <jstl.version>1.2</jstl.version>
         <hibernate.core.version>5.2.12.Final</hibernate.core.version>
         <mysql.connector.version>5.1.45</mysql.connector.version>
+        <aspectjweaver.version>1.8.13</aspectjweaver.version>
     </properties>
 
     <dependencies>
@@ -67,12 +68,6 @@
             <version>${mysql.connector.version}</version>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>c3p0</groupId>-->
-        <!--<artifactId>c3p0</artifactId>-->
-        <!--<version>0.9.1.2</version>-->
-        <!--</dependency>-->
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
@@ -90,6 +85,11 @@
             <version>5.2.12.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectjweaver.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
