Restrict access based on user roles using spring security

--- a/webcustomertracker/pom.xml
+++ b/webcustomertracker/pom.xml
@@ -23,7 +23,8 @@
     </build>
 
     <properties>
-        <spring.version>5.0.3.RELEASE</spring.version>
+        <springframework.version>5.0.3.RELEASE</springframework.version>
+        <springsecurity.version>5.0.1.RELEASE</springsecurity.version>
         <javax.servlet.version>4.0.0</javax.servlet.version>
         <jstl.version>1.2</jstl.version>
         <hibernate.core.version>5.2.12.Final</hibernate.core.version>
@@ -35,7 +36,25 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
+            <version>${springframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${springsecurity.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${springsecurity.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${springsecurity.version}</version>
         </dependency>
 
         <dependency>
@@ -71,18 +90,18 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${springframework.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${springframework.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-c3p0</artifactId>
-            <version>5.2.12.Final</version>
+            <version>${hibernate.core.version}</version>
         </dependency>
 
         <dependency>
