Implement database authentication

--- a/spring-security/src/main/resources/persistence-mysql.properties
+++ b/spring-security/src/main/resources/persistence-mysql.properties
@@ -2,8 +2,8 @@
 # JDBC connection properties
 #
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/spring_security_demo_plaintext?useSSL=false
-jdbc.user=springstudent
+jdbc.url=jdbc:mysql://localhost:3306/spring_security_demo_bcrypt?useSSL=false
+jdbc.user=pringstudent
 jdbc.password=springstudent
 
 #
